# mythic_mcp

./: .env.example  README.md  main.py  pyproject.toml
lib/: mythic_api.py
src/mythic_mcp/: __init__.py
src/mythic_mcp/api/: graphql_queries.py  mythic_api.py
src/mythic_mcp/cli/: main.py
src/mythic_mcp/prompts/: templates.py
src/mythic_mcp/tools/: tools.py
tests/: conftest.py
